--- a/src/styles/common/popup.scss
+++ b/src/styles/common/popup.scss
@@ -56,3 +56,22 @@
   }
 }
 
+
+
+@media screen and (max-width: 1023px){
+  .Popup__Close_outside{
+    right: 0;
+    left: auto;
+  }
+}
+
+
+
+@media screen and (max-width: 1023px){
+  .Popup-Wrap{
+    width: 100%;
+  }
+  .Popup__Close{
+    right: 9px;
+  }
+}
