--- a/src/styles/pages/404.scss
+++ b/src/styles/pages/404.scss
@@ -18,3 +18,13 @@
     @extend %black-btn_cherryHover;
   }
 }
+
+
+@media screen and (max-width: 767px){
+  .notFound{
+    padding-top: 84px;
+    height: auto !important;
+    a{
+    margin-top: 40px;
+  }}
+}
