--- a/src/templates/common/Footer.pug
+++ b/src/templates/common/Footer.pug
@@ -10,7 +10,7 @@ footer.Footer(style=blueFooter ? 'background-color: var(--light-blue);' : '')
         a(href="mailto: ryabonenko@a-count.net").GeoBlock__Text ryabonenko@a-count.net
       .GeoBlock
         p.GeoBlock__Title Крым
-        p.GeoBlock__Text г. Симферополь, Проспект Победы, д. 28 А, офис 609
+        p.GeoBlock__Text г. Симферополь, Проспект <br>Победы, д. 28 А, офис 609
         a(href="tel: 8 (978) 8000-373").GeoBlock__Text 8 (978) 8000-373
         a(href="mailto: crimea@a-count.net").GeoBlock__Text crimea@a-count.net
       .Social
