--- a/src/templates/common/Header.pug
+++ b/src/templates/common/Header.pug
@@ -10,11 +10,9 @@ header.Header
         </svg>
         .HeaderInfo-City__El(data-phoneNum="0").HeaderInfo-City__El_active Москва
         .HeaderInfo-City__El(data-phoneNum="1") Симферополь
-        .HeaderInfo-City__El(data-phoneNum="2") Чебаркуль
       .HeaderInfo-Phones
         a(href="tel: 8 (499) 189-78-70" data-phoneNum="0").HeaderInfo__Phone.HeaderInfo__Phone_active 8 (499) 189-78-70
-        a(href="tel: 8 (499) 189-78-71" data-phoneNum="1").HeaderInfo__Phone 8 (499) 189-78-71
-        a(href="tel: 8 (499) 189-78-72" data-phoneNum="2").HeaderInfo__Phone 8 (499) 189-78-72
+        a(href="tel: 8 (978) 8000-373" data-phoneNum="1").HeaderInfo__Phone 8 (978) 8000-373
     nav.Nav
       .Nav__Link 
         a(href="#") Аккаунтинг
@@ -28,4 +26,35 @@ header.Header
         a(href="#") О нас
       .Nav__Link 
         a(href="#") Контакты
-    button(data-callOrder).CallOrder Заказать звонок
+    button(data-callOrder).CallOrder
+      p Заказать звонок
+      <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M17.9994 13.4765V16.1862C18.0005 16.4377 17.9488 16.6867 17.8479 16.9172C17.7469 17.1477 17.5988 17.3546 17.413 17.5247C17.2273 17.6947 17.008 17.8242 16.7693 17.9048C16.5305 17.9854 16.2775 18.0153 16.0265 17.9927C13.2415 17.6907 10.5664 16.7409 8.21601 15.2197C6.02929 13.8329 4.17534 11.9827 2.7858 9.80026C1.25627 7.44389 0.304417 4.76107 0.0073459 1.96915C-0.0152705 1.71938 0.014473 1.46764 0.0946821 1.22996C0.174891 0.992289 0.303809 0.773885 0.473227 0.588659C0.642645 0.403433 0.848852 0.255443 1.07872 0.15411C1.30858 0.0527778 1.55707 0.00032375 1.80837 8.75714e-05H4.52347C4.96269 -0.00422671 5.3885 0.151 5.72152 0.436835C6.05455 0.722669 6.27207 1.11961 6.33354 1.55366C6.44814 2.42084 6.66067 3.27229 6.96707 4.09177C7.08883 4.41507 7.11519 4.76642 7.043 5.1042C6.97082 5.44198 6.80313 5.75203 6.5598 5.99761L5.41041 7.14473C6.69877 9.40604 8.57482 11.2784 10.8406 12.5642L11.99 11.4171C12.2361 11.1742 12.5467 11.0069 12.8852 10.9348C13.2236 10.8628 13.5757 10.8891 13.8996 11.0106C14.7207 11.3164 15.5739 11.5285 16.4428 11.6429C16.8824 11.7048 17.2839 11.9258 17.5709 12.2639C17.858 12.6019 18.0105 13.0335 17.9994 13.4765Z" fill="#B5076B"/>
+      </svg>
+    button.Burger
+      span
+      span
+      span
+.mobileMenu
+  .mobileMenu-Wrap
+    nav.Nav
+      .Nav__Link
+        a(href="#") Аккаунтинг
+      .Nav__Link
+        a(href="#") Услуги
+      .Nav__Link
+        a(href="#") Стоимость
+      .Nav__Link
+        a(href="#") Блог
+      .Nav__Link
+        a(href="#") О нас
+      .Nav__Link
+        a(href="#") Контакты
+    .mobileMenu-Phones
+      p.mobileMenu-Phones__Item
+        | Москва
+        a(href="tel: 8 (499) 189-78-70") 8 (499) 189-78-70
+      p.mobileMenu-Phones__Item
+        | Симферополь
+        a(href="tel: 8 (978) 8000-373") 8 (978) 8000-373
+      button(data-callOrder).CallOrder Заказать звонок
