--- a/src/templates/pages/blog.pug
+++ b/src/templates/pages/blog.pug
@@ -1,6 +1,6 @@
 extends ../template
 block title
-  | Главная | A-count
+  | Блог | A-count
 block variables
     - var blueFooter = true
 block content
