--- a/src/templates/pages/contacts.pug
+++ b/src/templates/pages/contacts.pug
@@ -21,6 +21,7 @@ block content
                 a(href="tel: +7 (499) 189-59-00").Contacts-Info-Body-Item__Text +7 (499) 189-59-00
                 a(href="tel: +7 (499) 760-01-02").Contacts-Info-Body-Item__Text +7 (499) 760-01-02
                 a(href="tel: +7 (499) 760-02-14").Contacts-Info-Body-Item__Text +7 (499) 760-02-14
+            .Contacts-Info-Body-Item_empty
             .Contacts-Info-Body-Item
               p.Contacts-Info-Body-Item__Title E-mail:
               .Contacts-Info-Body-Item-Wrap
@@ -58,3 +59,19 @@ block content
               p.Contacts-Info-Body-Item__Title Время работы:
               .Contacts-Info-Body-Item-Wrap
                 p.Contacts-Info-Body-Item__Text 09.30 - 18.00 (понедельник - пятница)
+  section.Requisites
+    .container
+      h2.Requisites__Title Реквизиты
+      .Requisites-Right
+        .Requisites-Item
+          p.Requisites-Item__Title Полное наименование организации:
+          p.Requisites-Item__Text Общество с ограниченной ответственностью  «А.Каунт»
+        .Requisites-Item
+          p.Requisites-Item__Title ИНН:
+          p.Requisites-Item__Text 7708770338
+        .Requisites-Item
+          p.Requisites-Item__Title Краткое наименование:
+          p.Requisites-Item__Text ООО «А.Каунт»
+        .Requisites-Item
+          p.Requisites-Item__Title ОГРН:
+          p.Requisites-Item__Text 1127746731375
