--- a/src/templates/pages/index.pug
+++ b/src/templates/pages/index.pug
@@ -101,7 +101,7 @@ block content
         p.Whom-List-Switch Мы
           button.Whom-List-Switch__Btn.Whom-List-Switch__Btn_active сможем
           button.Whom-List-Switch__Btn не сможем
-          | &nbsp;работать c Вами, если Вы
+          | &nbsp;<br>работать c Вами, если Вы
         .Whom-List__Item
           p Выручка более 10 млн. рублей в месяц
           p Бизнес, который хочет получить высококлассного бухгалтера
