--- a/src/templates/template.pug
+++ b/src/templates/template.pug
@@ -7,15 +7,24 @@ html(lang="ru")
     meta(name="viewport", content="width=device-width, initial-scale=1")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
     script(type="text/javascript" src="assets/scripts/jquery.min.js")
-    script(type="text/javascript" src="assets/scripts/Header.js")
-    script(type="text/javascript" src="assets/scripts/slick.min.js")
-    script(type="text/javascript" src="assets/scripts/main.js")
+
+
+    // POPUP
     script(type="text/javascript" src="assets/scripts/Popup.js")
 
 
     // validataion
     script(type="text/javascript" src="assets/scripts/supaform.min.js")
     script(type="text/javascript" src="assets/scripts/Validation.js")
+
+    script(type="text/javascript" src="assets/scripts/Body.js")
+    script(type="text/javascript" src="assets/scripts/Header.js")
+    script(type="text/javascript" src="assets/scripts/Quiz.js")
+    
+    script(type="text/javascript" src="assets/scripts/slick.min.js")
+    script(type="text/javascript" src="assets/scripts/main.js")
+
+
 
 
     // if price page
