--- a/src/styles/pages/blog.scss
+++ b/src/styles/pages/blog.scss
@@ -162,6 +162,7 @@
       &__Text{
         @extend %text;
         color: var(--mid-gray);
+        margin-bottom: 24px;
       }
     }
     &-Img{
@@ -292,6 +293,168 @@
       &:active{
         @media screen and (min-width: 1024px){
           color: var(--active-cherry);
+        }
+      }
+    }
+  }
+}
+
+
+
+@media screen and (max-width: 1023px){
+  .BlogBanner{
+    padding: 40px 0 80px;
+    .container{
+      display: flex;
+      flex-direction: column-reverse;
+      gap: 40px;
+      align-items: flex-start;
+    }
+    &__Img{
+      max-width: 400px;
+      margin-left: 0;
+    }
+  }
+  .Blog{
+    padding: 120px 0;
+    &-Head{
+      display: block;
+      &__Title{
+        margin-bottom: 24px;
+      }
+    }
+    &-Body{
+      border-top: 1px solid var(--about-white);
+    }
+    &-Item{
+      display: flex;
+      flex-direction: column-reverse;
+      height: auto;
+      &-Img{
+        height: 295px;
+      }
+    }
+  }
+
+  .Post{
+    padding: 24px 0 120px;
+    &Article{
+      &-Block{
+        display: block;
+        &-Head{
+          position: static;
+          .Blog-Item-Desc-Sub{
+            margin-bottom: 40px;
+          }
+          &__Title{
+
+          }
+        }
+        &-Content{
+          p, ul{
+            max-width: 600px;
+          }
+          &-Img{
+            margin: 0 -40px;
+            width: calc(100% + 80px);
+            height: 280px;
+            &:not(:first-child){
+              margin-top: 40px;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+
+
+@media screen and (max-width: 767px){
+  .BlogBanner{
+    padding: 24px 0 40px;
+    .container{
+      gap: 24px;
+    }
+    &__Img{
+      max-width: 280px;
+      width: 100%;
+    }
+    &-Desc{
+      width: 100%;
+      &__Title{
+        margin-bottom: 16px;
+      }
+      &__Text{
+        font-size: 14px;
+        line-height: 150%;
+        margin-bottom: 32px;
+        max-width: 224px;
+      }
+      &-Sub{
+        input{
+          margin-right: 0;
+        }
+        button{
+          height: 42px;
+          padding-left: 16px;
+          padding-right: 16px;
+        }
+      }
+    }
+  }
+  .Blog{
+    &-Head{
+      &-Filter{
+        &-Item:nth-child(n+5){
+          display: none;    
+        }
+      }
+    }
+    &-Item{
+      gap: 24px;
+      &-Img{
+        height: 140px;
+      }
+      &-Desc{
+        &__Title{
+          font-size: 18px;
+          line-height: 150%;
+          margin-bottom: 16px;
+        }
+        &-Sub{
+          margin-bottom: 16px;
+        }
+        &__Text{
+          font-size: 14px;
+          line-height: 150%;
+        }
+      }
+    }
+  }
+
+  .Post{
+    padding: 16px 0 120px;
+    &Article{
+      &-Block{
+        &-Head{
+          &__Title{
+            margin-bottom: 40px;
+          }
+        }
+        &-Content{
+          p, ul, li{
+            font-size: 14px;
+            line-height: 150%;
+          }
+          &-Img{
+            margin: 0 -16px;
+            width: calc(100% + 32px);
+            height: 130px;
+            &:not(:first-child){
+              margin-top: 24px;
+            }
+          }
         }
       }
     }
