--- a/src/styles/pages/services.scss
+++ b/src/styles/pages/services.scss
@@ -150,3 +150,91 @@
     }
   }
 }
+
+
+@media screen and (max-width: 1023px){
+  .ServicesSolo{
+    padding: 80px 0 120px;
+    &-Grid{
+      grid-template-columns: repeat(2, 1fr);
+      gap: 24px;
+      &-Item{
+        height: 200px;
+      }
+    }
+  }
+
+
+  .servicePage{
+    padding: 24px 0 120px;
+    &-Body{
+      display: block;
+      &-Content{
+        max-width: 600px;
+      }
+      &-Aside{
+        position: static;
+        margin-bottom: 80px;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 767px){
+  .ServicesSolo{
+    &__Title{
+      margin-bottom: 16px;
+    }
+    &__Text{
+      margin-bottom: 40px;
+    }
+    &-Grid{
+      grid-template-columns: repeat(1, 1fr);
+      gap: 24px;
+      &-Item{
+        height: auto;
+        &__Title{
+          margin-bottom: 24px;
+        }
+        &-Bottom{
+          svg{
+            height: 40px;
+            width: 40px;
+          }
+        }
+      }
+    }
+  }
+
+
+  .servicePage{
+    padding: 16px 0 162px;
+    &-Body{
+      position: relative;
+      padding-bottom: 42px;
+      &-Content{
+        h2, h3, h4, h5, h6{
+          font-size: 16px;
+          line-height: 150%;
+          margin-bottom: 16px;
+        }
+        p, ul li{
+          font-size: 14px;
+          line-height: 150%;
+        }
+      }
+      &-Aside{
+        position: static;
+        margin-bottom: 40px;
+      }
+      &__Title{
+        margin-bottom: 0;
+      }
+      &__Order{
+        position: absolute;
+        top: 100%;
+        width: 100%;
+      }
+    }
+  }
+}
