--- a/src/templates/pages/price.pug
+++ b/src/templates/pages/price.pug
@@ -22,13 +22,13 @@ block content
               <path d="M7 11L11 15L15 11" stroke="#B5076B" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
               <path d="M11 7V15" stroke="#B5076B" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
             </svg>
-            | <span>Прайс для Москвы,</span> 38.1 Кб, xlsx
+            | <span>Прайс для Москвы,</span>&nbsp;38.1 Кб, xlsx
           a(href="#").PriceDownload-Links__Link
             <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M11 21C16.5228 21 21 16.5228 21 11C21 5.47715 16.5228 1 11 1C5.47715 1 1 5.47715 1 11C1 16.5228 5.47715 21 11 21Z" stroke="#B5076B" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
               <path d="M7 11L11 15L15 11" stroke="#B5076B" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
               <path d="M11 7V15" stroke="#B5076B" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
             </svg>
-            | <span>Прайс для Симферополя,</span> 38.1 Кб, xlsx
+            | <span>Прайс для Симферополя,</span>&nbsp;38.1 Кб, xlsx
   include ../common/Price
   include ../common/Form
